# micropython

./: .gitattributes  .gitignore  .gitmodules  .micropython-branches.json  .pre-commit-config.yaml  AGENT.md  BLE_DEINIT_CRASH_ROOT_CAUSE.md  BLE_STACK_OVERFLOW_FIX.md  CLAUDE.local.md  COVERAGE.md  CPYTHON_COMPATIBILITY.md  Claude_usbhost.md  DEVLOG.md  ENUM_EXTENSIONS_PLAN.md  FREERTOS_IMPLEMENTATION_PLAN.md  FREERTOS_IMPL_SUMMARY.md  FREERTOS_THREADING_REQUIREMENTS.md  GC_TIMING_INVESTIGATION.md  GDB_HANG_DEBUG_PLAN.md  IPERF3_LWIP_IMPLEMENTATION_PLAN.md  KCONFIG_PLAN.md  KCONFIG_STATUS.md  Kconfig  LATENCY_VALIDATION.md  Makefile  NATIVE_FUNCTION_OVERHEAD.md  NIMBLE_STARTUP_ANALYSIS.md  PORTS_ZEPHYR_BASELINE.md  PROFILING_RESULTS_4NS.md  PR_DESCRIPTION_DRAFT.md  SIZE_REPORT.md  SOFT_RESET_HANG_GDB_FINDINGS.md  SPRINT1_IMPLEMENTATION_REVIEW.md  STM32_Ethernet_Driver_Improvements_2025-01-02.md  TECHNICAL_PLAN_LOCAL_NAMES.md  THREADING_INVESTIGATION_NOTES.md  TOML_INTEGRATION.md  Timeout exit code:   VENDOR_COMMAND_INVESTIGATION.md  WINDOWS_CROSS_BUILD.md  (+40 more)
docs/: BUFFER_FIX_VERIFICATION.md  BUFFER_INVESTIGATION_RESULTS.md  CONNECTION_CALLBACK_FIX_20251020.md  Claude_usbhost.md  DEBUGGING.md  FREERTOS_BLE_ARCHITECTURE.md  FREERTOS_INTEGRATION.md  HCI_INIT_HANG_ANALYSIS.md  ISSUE_10_SOFT_RESET_HANG.md  (+18 more)
tools/mpy-triage/: .gitignore  pyproject.toml
tools/mpy-triage/data/: schema.sql
tools/mpy-triage/src/mpy_triage/: cli.py
tools/mpy-triage/src/mpy_triage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/mpy-triage/tests/: test_db.py
(+1661 files in other folders)
